# mitos

./: .gitignore  .golangci.yml  .goreleaser.yaml  .krew.yaml  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.canary  Dockerfile.console  Dockerfile.controller  Dockerfile.facade  Dockerfile.forkd  Dockerfile.frontdoor  Dockerfile.gateway  Dockerfile.husk-stub  Dockerfile.kvm-device-plugin  Dockerfile.preview-proxy  Dockerfile.python-base  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  artifacthub-repo.yml  go.mod  go.sum  index.yaml  install.sh  llms.txt  release-please-config.json
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_finding.yml
.github/workflows/: actionlint.yaml  bench.yaml  ci.yaml  cluster-e2e.yaml  codeql.yml  cve-watch.yaml  dco.yaml  discord-notify.yaml  helm-release.yaml  helm.yaml  krew.yaml  kvm-test.yaml  operator-release.yaml  pr-policy.yaml  publish-sdks.yaml  publish.yaml  release-please.yml  release.yaml  scorecard.yml  sdk-tests.yaml  tti-canary.yaml
.superpowers/sdd/: docs-examples-report.md  docs-sweep-a-report.md  sdk-ts-report.md  task-1.4-report.md
api/v1/: budget.go  budget_test.go  doc.go  groupversion_info.go  org_types.go  sandbox_types.go  sandbox_types_test.go  sandboxpool_types.go  types.go  validation.go  validation_test.go  workspace_types.go  zz_generated.deepcopy.go
api/v1alpha1/: budget_types.go  conversion.go  cpupinning_types_test.go  groupversion_info.go  template_buildsteps_test.go  types.go  workspace_types.go  zz_generated.deepcopy.go
api/v1alpha2/: budget.go  budget_test.go  conversion.go  conversion_test.go  doc.go  groupversion_info.go  sandbox_types.go  sandboxpool_types.go  webhook.go  zz_generated.deepcopy.go
bench/: README.md  burst-tti.py  canary-baseline.json  canary-check.py  claim-first-exec-latency.sh  fork-exec-job.yaml  husk-activate-latency.sh  networked-live-fork-latency.sh  peer-tti.py  pool-rebuild-propagation.sh  pvm-spike.sh  sleep-consolidation.sh  sustained-claims-throughput.sh  tti-latency.py  workspace-fork-latency.sh  workspace-hydrate-latency.sh
bench/agent-conformance/: main_test.go
bench/claim/: config.go  config_test.go  main.go
bench/competitors/: README.md  run-comparison.sh  run-fanout-comparison.sh
bench/facade/: README.md  main.go
deploy/: imagepullsecret.yaml  kustomization.yaml
docs/: ci-runner.md  cli.md  compliance-claims.md  compose.md  conditions.md  distribution.md  encryption.md  facade-conformance.md  failure-gc.md  fork-correctness.md  husk-pods.md  install.md  kernel-cve.md  krew.md  lifecycle.md  mcp.md  metering.md  migrating-from-daytona.md  migrating-from-e2b.md  migration-to-mitos-org.md  networking.md  observability.md  open-core.md  operatorhub.md  ports.md  preview-urls.md  quickstart.md  redhat-certification.md  releasing.md  scheduling.md  secrets.md  security-operations.md  security-review-policy.md  snapshot-distribution.md  snapshot-format.md  supply-chain.md  telemetry.md  templates.md  threat-model.md  workspaces.md
examples/: claim.yaml  fork.yaml  multi-workspace.yaml  python-pool.yaml  sandbox.yaml
guest/agent-rs/: Cargo.toml  build.rs  deny.toml
guest/agent-rs/proto/sandbox/controlv1/: internal.proto
guest/agent-rs/src/: env.rs  error.rs  handlers.rs  init.rs  kernel.rs  lib.rs  main.rs  protocol.rs  transport.rs
guest/agent-rs/src/fork/: clock.rs  mod.rs  network.rs  reseed.rs  signal.rs  volumes.rs
guest/agent-rs/src/init/: mod.rs
guest/agent-rs/src/kernel/: driver.rs  mod.rs
guest/agent-rs/src/service/: archive.rs  control.rs  exec.rs  files.rs  mod.rs  portforward.rs  processes.rs  runcode.rs  vitals.rs  watch.rs  workload.rs
guest/agent-rs/src/sys/: clock.rs  crng.rs  entropy.rs  kill.rs  mod.rs  mount.rs  netlink.rs  pty.rs  rlimit.rs  signal.rs  vsock.rs
guest/agent-rs/tests/: conformance.rs  protocol_roundtrip.rs  secret_log_audit.rs
hack/: build-rust-agent.sh  check-apierr-remediation.sh  e2e-test.sh  install-firecracker-patched.sh  install-firecracker.sh  kind-config-placement.yaml  kind-config.yaml  kind-setup.sh  rust-agent-cutover.md  rust-agent-rootfs.md  test-firecracker-install.sh
proto/: forkd.proto
scripts/: approve-signup.sh
sdk/python/: README.md  pyproject.toml
sdk/python/agent_run/: __init__.py  client.py  direct.py  sandbox.py
sdk/python/examples/: README.md  background_agent.py  best_of_n.py  browser_cdp.py  code_interpreter.py  direct.py  fork_native_subagent.py  quickstart.py  rl_evals.py
sdk/python/mitos/: __init__.py  _connect.py  _envelope.py  _k8s.py  _runtime.py  aio.py  client.py  daytona.py  direct.py  e2b.py  errors.py  git.py  guest.py  pty.py  sandbox.py  subagent.py  template.py  types.py  workspace.py
sdk/python/mitos/integrations/: __init__.py  _mapping.py  claude_agent.py  langchain.py  openai_agents.py  vibekit.py  zenml.py
sdk/python/tests/: conftest.py  test_async.py  test_async_direct_connect.py  test_auth_resolution.py  test_claude_agent_integration.py  test_conformance.py  test_connect_conn_reuse.py  test_daytona_compat.py  test_default_pool.py  test_direct.py  test_direct_connect.py  test_e2b_compat.py  test_flat_create.py  test_fork_timeout.py  test_from_name.py  test_git.py  test_guest.py  test_http_pool.py  test_langchain_integration.py  test_live_fork.py  test_openai_agents_integration.py  test_preview.py  test_pty.py  test_pty_connect.py  test_quickstart_snippet.py  test_run_code.py  test_sandbox.py  test_serve.py  test_stream.py  test_subagent.py  test_template_builder.py  test_template_cache.py  test_template_workload.py  test_typed_errors.py  test_types.py  test_vibekit_integration.py  test_workspace.py  test_zenml_integration.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  cluster.rs  connect.rs  error.rs  k8s.rs  lib.rs  types.rs
sdk/rust/tests/: cluster_test.rs  connect_test.rs  server_test.rs
web/: .gitignore  package.json  pnpm-lock.yaml
(+1666 files in other folders)
