[project]
name = "mitos"
version = "0.1.0"
description = "Python SDK for mitos: sub-millisecond sandbox forking on Kubernetes"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "kubernetes>=31.0.0",
    "httpx>=0.27.0",
    "websocket-client>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "websockets>=12.0",
]
# Optional framework adapters. The SDK never hard-depends on these; the adapter
# modules import mitos always and the framework lazily, so the base SDK and its
# test suite run without them. Install only if you use the integration.
langchain = [
    "langchain>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mitos"]
