[project]
name = "mitos"
version = "0.1.0"
description = "Python SDK for mitos: sub-millisecond sandbox forking on Kubernetes"
keywords = ["sandbox", "firecracker", "microvm", "ai-agents", "kubernetes", "code-interpreter", "mitos"]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "websocket-client>=1.7.0",
]

[project.urls]
Homepage = "https://mitos.run"
Documentation = "https://mitos.run/docs"
Repository = "https://github.com/mitos-run/mitos"
Issues = "https://github.com/mitos-run/mitos/issues"

[project.optional-dependencies]
# Cluster mode (mitos.client.AgentRun, mitos.aio, mitos.sandbox, mitos.workspace)
# needs the Kubernetes client. Direct mode (mitos.create / mitos.direct over the
# sandbox-server REST API) and the in-guest SDK (mitos.guest) speak only httpx
# and never import it, so it is an optional extra: 'pip install mitos' stays
# light and 'pip install mitos[k8s]' adds cluster support (issue #22).
k8s = [
    "kubernetes>=31.0.0",
]
dev = [
    "kubernetes>=31.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "websockets>=12.0",
]
# Optional framework adapters. The SDK never hard-depends on these; the adapter
# modules import mitos always and the framework lazily, so the base SDK and its
# test suite run without them. Install only if you use the integration.
langchain = [
    "langchain>=0.3",
]
openai-agents = [
    "openai-agents>=0.1",
]
claude-agent = [
    "claude-agent-sdk>=0.1",
]
vibekit = [
    "vibekit>=0.1",
]
zenml = [
    "zenml>=0.60",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mitos"]
