# PyPI distribution name. The bare `mitos` name on PyPI is taken by an
# unrelated bioinformatics tool, so the distribution publishes as `mitos-run`.
# The import package stays `mitos` (see the `mitos/` directory and the
# [tool.hatch.build.targets.wheel] packages list below): you `pip install
# mitos-run` but `import mitos`, the same dist-name != import-name pattern as
# scikit-learn -> sklearn.
[project]
name = "mitos-run"
version = "0.2.0"
description = "Python SDK for Mitos: snapshot-fork sandboxes for AI agents on Kubernetes."
keywords = ["sandbox", "firecracker", "microvm", "ai-agents", "kubernetes", "code-interpreter", "mitos"]
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "websocket-client>=1.7.0",
]

[project.urls]
Homepage = "https://mitos.run"
Documentation = "https://mitos.run/docs"
Repository = "https://github.com/mitos-run/mitos"
Issues = "https://github.com/mitos-run/mitos/issues"

[project.optional-dependencies]
# Cluster mode (mitos.client.AgentRun, mitos.aio, mitos.sandbox, mitos.workspace)
# needs the Kubernetes client. Direct mode (mitos.create / mitos.direct over the
# sandbox-server REST API) and the in-guest SDK (mitos.guest) speak only httpx
# and never import it, so it is an optional extra: 'pip install mitos-run' stays
# light and 'pip install mitos-run[k8s]' adds cluster support (issue #22).
k8s = [
    "kubernetes>=31.0.0",
]
dev = [
    "kubernetes>=31.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "websockets>=12.0",
]
# Optional framework adapters. The SDK never hard-depends on these; the adapter
# modules import mitos always and the framework lazily, so the base SDK and its
# test suite run without them. Install only if you use the integration.
langchain = [
    "langchain>=0.3",
    # deepagents' pluggable sandbox backend (as_deepagents_backend); the adapter
    # imports it lazily so the base SDK never hard-depends on it.
    "deepagents>=0.6",
]
openai-agents = [
    "openai-agents>=0.1",
]
claude-agent = [
    "claude-agent-sdk>=0.1",
]
vibekit = [
    "vibekit>=0.1",
]
zenml = [
    "zenml>=0.60",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mitos"]
